--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 :root {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content:  */
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color:#131415;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,7 +17,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+/* .nav {
+  align-content: center;
 
+} */
+.flexbox-container {
+  display: flex;
+  /* flex-direction: row; */
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,11 +34,14 @@ a:hover {
   color: #535bf2;
 }
 
+.nav{
+  align-content: center;
+}
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* place-items: center; */
+  min-width: 100vw;
   min-height: 100vh;
 }
 
@@ -48,7 +62,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #000000;
 }
 button:focus,
 button:focus-visible {
